<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryLightColor"
            app:navigationIcon="@drawable/ic_close_white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ToggleButton
                    android:id="@+id/details_favorite_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toStartOf="@id/edit_pet_icon"
                    android:background="@android:color/transparent"
                    android:button="@drawable/favorite_button_24dp"
                    android:contentDescription="@string/content_description_favorite_button"
                    android:gravity="center"
                    android:textOff=""
                    android:textOn=""
                    app:buttonTint="@color/primaryDarkColor"
                    tools:checked="true" />

                <ImageButton
                    android:id="@+id/edit_pet_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/add_widget_icon"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/content_description_edit_pet"
                    android:focusable="true"
                    android:padding="16dp"
                    android:src="@drawable/edit_icon" />

                <ImageButton
                    android:id="@+id/add_widget_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/content_description_add_to_widgets"
                    android:focusable="true"
                    android:padding="16dp"
                    android:src="@drawable/add_to_widgets_icon" />
            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/details_snackbar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:id="@+id/details_pet_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/secondaryLightColor"
            android:contentDescription="@string/details_image_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/dog_photo"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/details_pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            tools:text="Diesel" />

        <TextView
            android:id="@+id/details_pet_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_pet_name"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_pet_name"
            tools:text="Miniature-Schnauzer" />

        <TextView
            android:id="@+id/details_pet_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/details_pet_breed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            tools:text="12" />


        <TextView
            android:id="@+id/details_pet_bio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_border"
            android:elevation="10dp"
            android:padding="8dp"
            android:scrollbars="vertical"

            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_pet_breed"
            tools:text="Miniature-Schnauzer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/details_walk_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/content_description_walk_button"
            android:text="@string/take_a_walk_button_text"
            app:icon="@drawable/ic_action_pet_favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/details_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/content_description_stop_button"
            android:text="@string/stop_button_text"
            app:icon="@drawable/ic_action_pet_favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/details_walk_button"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primaryColor"
            app:strokeWidth="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/steps_label_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <TextView
                    android:id="@+id/steps_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="0" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/details_stop_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:strokeColor="@color/primaryColor"
            app:strokeWidth="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/all_time_total_label_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <TextView
                    android:id="@+id/total_steps_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    tools:text="0" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="731dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".50" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>